<resources>
    <string name="app_name">My_unIUM</string>
    <string name="error">Error</string>
    <string name="error_login">Incorrect username or password</string>
    <string name="error_signup">The form contains errors</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="signUp"><u>Or sign up now</u></string>
    <string name="signup">Sign up</string>
    <string name="alert_dialog_ok">Ok</string>
    <string name="alert_dialog_cancel">Cancel</string>

    <string name="name">Name</string>
    <string name="name_hint">es. Mario</string>
    <string name="surname">Surname</string>
    <string name="surname_hint">es. Rossi</string>
    <string name="birthdate">Birthdate</string>
    <string name="birthdate_hint">es. 1/1/1999</string>
    <string name="mtr">ID</string>
    <string name="mtr_hint">es. 12345</string>
    <string name="course">Course</string>
    <string name="course_hint">es. Computer science</string>
    <string name="email">Email</string>
    <string name="email_hint">es. mariorossi@gmail.com</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="username">Username</string>
    <string name="username_example">es. mrossi1</string>

    <string name="confirm">Ok</string>
    <string name="new_account">New account created</string>
    <string name="clear"><u>Clear</u></string>
    <string name="back_to_login">Back</string>
    <string name="activity_result_title">Registration completed</string>
    <string name="ok">Ok</string>
    <string name="delete">Delete</string>
    <string name="choose">Choose the exam to delete</string>


    <string name="average">Grade point average: </string>
    <string name="eximated">Estimated graduation grade: </string>
    <string name="user_pw_error">Incorrect username or password</string>
    <string name="newExam">Add a new exam</string>
    <string name="deleteExam">Delete an exam</string>
    <string name="examForm">New Exam</string>
    <string name="exam">Exam name</string>
    <string name="examName">Exam</string>
    <string name="grade">Grade</string>
    <string name="exam_hint">es. Iterazione uomo-macchina</string>
    <string name="cfu">CFU</string>
    <string name="cfu_hint">max 12 cfu</string>
    <string name="result">Grade</string>
    <string name="result_hint">max 30</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
</resources>