<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/back"
            android:backgroundTint="@color/black"
            android:text="@string/back_to_login"
            android:layout_marginStart="5sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/examForm"
            android:textSize="36sp"
            android:gravity="center"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/error"
            android:text="@string/error_signup"
            android:gravity="center"
            android:visibility="gone"
            android:background="@color/red"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exam"
            android:textSize="28sp"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="5sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textSize="28sp"
            android:id="@+id/examName"
            android:hint="@string/exam_hint"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="5sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cfu"
            android:textSize="28sp"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="5sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="28sp"
            android:id="@+id/cfu"
            android:hint="@string/cfu_hint"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="5sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textSize="28sp"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="5sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="28sp"
            android:id="@+id/grade"
            android:hint="@string/result_hint"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="5sp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="28dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/insert_text"
            android:backgroundTint="@color/black"
            android:text="@string/confirm"
            android:textAllCaps="true"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="5sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/clear_text"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:text="@string/clear"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="5sp"/>
    </LinearLayout>

</ScrollView>