<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="28dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:src="@drawable/unica_800_black" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="22dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="36sp"
            android:textStyle="normal"
            android:gravity="center"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/error"
            android:text="@string/error_login"
            android:gravity="center"
            android:visibility="gone"
            android:textColor="@color/white"
            android:background="@color/red"
            android:textSize="18sp"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textSize="28sp"
            android:id="@+id/user"
            android:hint="@string/username_hint"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="5sp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="28dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="28sp"
            android:id="@+id/pw"
            android:hint="@string/password_hint"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="5sp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="28dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login"
            android:text="@string/login"
            android:backgroundTint="@color/blue"
            android:textSize="20sp"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="5sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signUp"
            android:text="@string/signUp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="5sp"/>


    </LinearLayout>

</ScrollView>