<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_height="40dp"
                android:layout_width="wrap_content"
                android:layout_weight="2"
                android:text="@string/logout"
                android:backgroundTint="@color/black"
                android:textSize="10sp"
                android:id="@+id/logout"
                android:layout_alignParentStart="true"
                tools:ignore="SmallSp"
                android:layout_marginStart="5sp"/>


            <Button
                android:layout_height="40dp"
                android:layout_width="wrap_content"
                android:layout_weight="2"
                android:text="@string/profile"
                android:backgroundTint="@color/black"
                android:textSize="10sp"
                android:id="@+id/profile"
                android:layout_alignParentEnd="true"
                tools:ignore="SmallSp"
                android:layout_marginEnd="5sp"/>

        </RelativeLayout>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:src="@drawable/unica_800_black" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/anagraph"
            android:textStyle="bold"
            android:textSize="22sp"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/course"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gpa"
            android:textSize="20sp"
            android:textStyle="normal"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="5sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cfuCount"
            android:textSize="20sp"
            android:textStyle="normal"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="5sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/egg"
            android:textSize="20sp"
            android:textStyle="normal"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="5sp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/newExam"
                android:layout_gravity="center"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:backgroundTint="@color/black"
                android:text="@string/newExam"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/deleteExam"
                android:layout_gravity="center"
                android:backgroundTint="@color/black"
                android:text="@string/deleteExam"
                android:visibility="visible"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rvExams"
            android:orientation="vertical"/>

    </LinearLayout>

</RelativeLayout>